# mujoco

./: .gitattributes  .gitignore  investigate.py
.github/workflows/: build.yml  build_steps.sh
cmake/: filament-allow-clang-windows.patch  filament-webgl-froxel-record-size.patch
cmake/third_party_deps/: agent_imgui.cmake  filament.cmake
include/mujoco/: mjmodel.h  mjtype.h  mjvisualize.h  mujoco.h
model/humanoid/: humanoid.xml
model/replicate/: particle.xml
python/: MANIFEST.in  pyproject.toml  setup.py
python/mujoco/experimental/implot/: implot.cc
python/mujoco/experimental/netimgui/: .clang-format  CMakeLists.txt
python/mujoco/experimental/netimgui/Code/Client/: NetImgui_Api.h  NetImgui_Config.h
python/mujoco/experimental/netimgui/Code/Client/Private/: NetImgui_Api.cpp  NetImgui_Client.cpp  NetImgui_Client.h  NetImgui_CmdPackets.h  NetImgui_CmdPackets_DrawFrame.cpp  NetImgui_CmdPackets_DrawFrame.h  NetImgui_Network.h  NetImgui_NetworkPosix.cpp  NetImgui_Shared.h  NetImgui_WarningDisable.h  NetImgui_WarningDisableImgui.h  NetImgui_WarningDisableStd.h  NetImgui_WarningReenable.h
python/mujoco/experimental/netimgui/Code/Sample/Common/: Sample.cpp  Sample.h  main.cpp
python/mujoco/experimental/netimgui/Code/Sample/SampleNoBackend/: SampleNoBackend.cpp
python/mujoco/experimental/netimgui/Code/ServerApp/Source/: NetImguiServer_App.cpp  NetImguiServer_App.h  NetImguiServer_Config.cpp  NetImguiServer_Config.h  NetImguiServer_Network.cpp  NetImguiServer_Network.h  NetImguiServer_RemoteClient.cpp  NetImguiServer_RemoteClient.h  NetImguiServer_UI.cpp  NetImguiServer_UI.h
python/mujoco/experimental/netimgui/Code/ServerApp/Source/Fonts/: Roboto_Medium.cpp
python/mujoco/experimental/netimgui/google/: NetImgui_NetworkWASM.cpp  logging.h  network_status.h
python/mujoco/experimental/studio/: BUILD  CMakeLists.txt  READ_ME_FIRST.md  index.html  launch_passive.py  live_state.h  native_viewer.cc  native_viewer.py  parser.cc  parser.py  studio.py  ui_server.cc  ui_server_proxy.py  viewer.py  viewer_app.py  viewer_handle.py  viewer_protocol.py  web_client.cc  web_server.py  web_viewer.py
python/mujoco/experimental/studio/web/: CMakeLists.txt  headless_ui.cc  index.html  render_state.h  state_link.cc  state_link.h  state_payload.cc  state_payload.h  ui_link.cc  ui_link.h  ui_server.cc  web_client.cc  web_client_local_ui.cc  web_client_local_ui.h  web_client_remote_ui.cc  web_client_remote_ui.h  web_client_session.cc  web_client_session.h  web_client_state_link.cc  web_client_state_link.h  web_client_ui_link.cc  web_client_ui_link.h  web_server.py
python/mujoco/experimental/studio/web/tools/: make_linux_sdk.sh
python/mujoco/experimental/studio/web_viewer/: BUILD  CMakeLists.txt  READ_ME_FIRST.md  hello_web.py  index.html  live_state.h  render_state.h  state_server.py  ui_server.cc  web_client.cc  web_server.py  web_viewer.py
python/mujoco/experimental/studio/web_viewer/tools/: make_linux_sdk.sh
simulate/: CMakeLists.txt  glfw_adapter.cc  main.cc  simulate.cc
simulate/cmake/: ApplyPatch.cmake  FindOrFetch.cmake
src/engine/: engine_forward.c  engine_inverse.c  engine_support.c  engine_support.h  engine_vis_init.c  engine_vis_visualize.c
src/experimental/filament/: CMakeLists.txt  render_context_filament.cc  render_context_filament.h  stubs.cc  stubs.h
src/experimental/filament/filament/: builtins.cc  drawable.cc  light.cc
src/experimental/platform/: CMakeLists.txt
src/experimental/platform/hal/: renderer.h  window.cc
src/experimental/platform/ux/: command_palette.cc  command_palette.h  gui.cc  gui.h  imgui_bridge.cc  imgui_bridge.h  imgui_widgets.h  xml_editor_plugin.cc
src/experimental/studio/: CMakeLists.txt  README.md  app.cc  app.h  build.sh  command_palette.cc  command_palette.h  main.cc  ui_capture.cc
src/experimental/studio/llm/: llm_claude.cc  llm_claude.h  llm_gemini.cc  llm_gemini.h  llm_mock.h  llm_panel.cc  llm_panel.h  llm_provider.h  system_prompt.md  test_runner.cc  test_runner.h  ui_agent.cc  ui_agent.h
src/experimental/studio/llm/eval/: .gitignore  000_prompt.md  001_prompt.md  002_prompt.md  003_prompt.md  004_prompt.md  005_prompt.md  006_prompt.md  007_prompt.md  008_prompt.md  009_prompt.md  README.md  test.sh
src/experimental/studio/llm/eval/claude_sonnet_4_6/: 000_input.md  001_input.md
src/experimental/usd/: usd_to_mjspec.cc
src/experimental/usd/plugins/mjcf/: mujoco_to_usd.cc
src/render/: render_context.c  render_gl2.c  render_gl3.c  render_util.c  render_util.h
src/render/filament/core/: material_manager.cc  material_manager.h  renderable.cc  renderable.h
src/render/glad/: glad.c  glad.h
wasm/: README.md
wasm/codegen/: binding_builder.py
wasm/codegen/generators/: enums.py  enums_test.py  error_handler.py  functions.py  functions_test.py
wasm/codegen/helpers/: common_test.py  constants.py  function_utils.py  function_utils_test.py  struct_constructor_code_builder.py  struct_field_handler.py  structs_parser.py
wasm/tests/: enums_test_generator.py
